# C.O.U.C.H

./: .env.example  .gitignore  config.yaml  install.sh  pyproject.toml  tox.ini
assets/: generate_beeps.py
client/: audio.py  client.py  pyproject.toml
server/: agent.py  config.py  config.yml  pipeline.py  pyproject.toml  pyrightconfig.json  server.py  settings.py  snapshot.py  state.py
server/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py
server/tools/: __init__.py  browser.py  browser_manager.py  registry.py  system.py
server/tools/browser/: manager.py
server/tools/browser/chrome/: context.py  impl.py  schema.py
server/tools/browser/youtube/: context.py  impl.py  schema.py  snapshot.js
server/tools/general/: impl.py  schema.py
server/utils/: image.py
